@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.entertain"
 	name="Telekom Entertain"
-	version="0.0.1"
+	version="0.0.2"
 	provider-name="Leo Moll">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
