@@ -2,6 +2,7 @@
 - Fixed wrong repository structure (Closes #1)
 - Fixed invalid XML in settings.xml (Closes #2)
 - Added missing tags to addon.xml (Closes #3)
+- Improved addon path detection (Closes #4)
 
 0.0.1
 - Initial version
